some css, html and added to search bar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,18 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <h1 class="styles-module__header____DJB1 styles-module__loggedOutHeader___uctPQ xlate-none">Happy Trails</h1>
+    <div id="root"> 
+      
+    </div>
+    <div>
+      <picture>
+        <img alt="A hiker with a blond ponytail walks in front of a white husky dog through dry yellow grass and scattered trees alongside calm waters showing their reflection below." src="https://cdn-assets.alltrails.com/assets/hero-images/hero-logged-out-3-w2800-331a53e0d8a7db7ef047733917fb264a703398dead15dcc33136db1e8876c231.jpg" class="styles-module__heroImage___YOF_w">
+      </picture>
+      <div class="styles-module__contentContainer____Jv19">
+    </div>
+ 
+ 
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
