css, html, logo in progress

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,19 +29,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Reciplease</title>
+    <title>Happy Trails</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1 class="styles-module__header____DJB1 styles-module__loggedOutHeader___uctPQ xlate-none">Happy Trails</h1>
+    <h1 class="styles-module__header____DJB1 styles-module__loggedOutHeader___uctPQ xlate-none">  <picture>
+      <img src="https://cdn.discordapp.com/attachments/1121511941299515495/1123671408246005800/11.png" alt="happytrails_logo" class="logo">
+    </picture>
+   </h1>
+   
     <div id="root"> 
       
     </div>
     <div>
-      <picture>
-        <img alt="A hiker with a blond ponytail walks in front of a white husky dog through dry yellow grass and scattered trees alongside calm waters showing their reflection below." src="https://cdn-assets.alltrails.com/assets/hero-images/hero-logged-out-3-w2800-331a53e0d8a7db7ef047733917fb264a703398dead15dcc33136db1e8876c231.jpg" class="styles-module__heroImage___YOF_w">
-      </picture>
+      <div class="image-container">
+        <img alt="A hiker with a blond ponytail walks in front of a white husky dog through dry yellow grass and scattered trees alongside calm waters showing their reflection below." src="https://a.cdn-hotels.com/gdcs/production61/d1995/83038aee-f8d0-4d13-8845-18e4eed0ba2d.jpg" class="styles-module__heroImage___YOF_w">
+        <img alt="zion narrows" src="https://blog-assets.thedyrt.com/uploads/2018/05/hiking-the-narrows.jpg">
+      </div>
       <div class="styles-module__contentContainer____Jv19">
+      </div>
     </div>
  
  
