--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -29,28 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Happy Trails</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1 class="styles-module__header____DJB1 styles-module__loggedOutHeader___uctPQ xlate-none">  <picture>
-      <img src="https://cdn.discordapp.com/attachments/1121511941299515495/1123671408246005800/11.png" alt="happytrails_logo" class="logo">
-    </picture>
-   </h1>
-   
-    <div id="root"> 
-      
-    </div>
-    <div>
-      <div class="image-container">
-        <img alt="A hiker with a blond ponytail walks in front of a white husky dog through dry yellow grass and scattered trees alongside calm waters showing their reflection below." src="https://a.cdn-hotels.com/gdcs/production61/d1995/83038aee-f8d0-4d13-8845-18e4eed0ba2d.jpg" class="styles-module__heroImage___YOF_w">
-        <img alt="zion narrows" src="https://blog-assets.thedyrt.com/uploads/2018/05/hiking-the-narrows.jpg">
-      </div>
-      <div class="styles-module__contentContainer____Jv19">
-      </div>
-    </div>
- 
- 
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
