--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,14 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Happy Trails</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1 class="styles-module__header____DJB1 styles-module__loggedOutHeader___uctPQ xlate-none">  <picture>
-
-      <img src="https://cdn.discordapp.com/attachments/1121511941299515495/1123700200377176104/Happy.png" alt="happytrails_logo" class="logo">
-
+      <img src="https://cdn.discordapp.com/attachments/1121511941299515495/1123671408246005800/11.png" alt="happytrails_logo" class="logo">
     </picture>
    </h1>
    
